--- a/config/cendrawasih.conf
+++ b/config/cendrawasih.conf
@@ -1,7 +1,7 @@
 server {
      listen 80;
      listen [::]:80;
-     liste 443 ssl http2 reuseport;
+     listen 443 ssl http2 reuseport;
      listen [::]:443 http2 reuseport;
      server_name xxx;
      ssl_certificate /etc/xray/xray.crt;
