--- a/config/cendrawasih.conf
+++ b/config/cendrawasih.conf
@@ -130,5 +130,19 @@ server {
     ssl_certificate_key /etc/xray/xray.key;
     ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
     ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-    root /var/www/html;
+    access_log /var/log/nginx/vps-access.log;
+    error_log /var/log/nginx/vps-error.log error;
+    root /root/cendrawasih/public_html;
+    
+    location / {
+     index  index.html index.htm index.php;
+     try_files $uri $uri/ /index.php?$args;
+     }
+     
+    location ~ \.php$ {
+     include /etc/nginx/fastcgi_params;
+     fastcgi_pass  127.0.0.1:9000;
+     fastcgi_index index.php;
+     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
 }
