--- a/config/cendrawasih.conf
+++ b/config/cendrawasih.conf
@@ -12,9 +12,9 @@ server {
 
 # XRAY SERVER (c) Cendrawasih 2023
      # Vless
-     location /vlessws {
+     location /vless {
           if ($http_upgrade != "Upgrade"){
-               rewrite /(.*) /vlessws break;
+               rewrite /(.*) /vless break;
           }
      proxy_redirect off;
      proxy_pass http://127.0.0.1:10001;
