--- a/openvpn/ohp.service
+++ b/openvpn/ohp.service
@@ -6,7 +6,7 @@ After=network.target
 
 [Service]
 ExecStart=/usr/sbin/ohp -port 8787 -proxy 127.0.0.1:3128 -tunnel 127.0.0.1:1194
-Restart=always
+Restart=on-failure
 RestartSec=3
 
 [Install]
