--- a/config/cendrawasih.conf
+++ b/config/cendrawasih.conf
@@ -12,9 +12,9 @@ server {
 
 # XRAY SERVER (c) Cendrawasih 2023
      # Vless
-     location /vless {
+     location /vlessws {
           if ($http_upgrade != "Upgrade"){
-               rewrite /(.*) /vless break;
+               rewrite /(.*) /vlessws break;
           }
      proxy_redirect off;
      proxy_pass http://127.0.0.1:10001;
@@ -76,7 +76,7 @@ server {
      }
 
      # Vless grpc
-     location ^~ /vless-grpc {
+     location ^~ /vlessws-grpc {
           proxy_redirect off;
           grpc_set_header X-Real-IP $remote_addr;
           grpc_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
