--- a/xray/config.json
+++ b/xray/config.json
@@ -30,7 +30,7 @@
        "streamSettings":{
          "network": "ws",
             "wsSettings": {
-                "path": "/vless"
+                "path": "/vlessws"
           }
         }
      },
